--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
           <table>
             <thead>
               <th>Transaction</th>
-              <th>Amount</th>
+              <th>Amount ($)</th>
             </thead>
             <tbody id="tbody">
               
